samples/_failures_safe/1761625059_24c854_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d37f74ba.c: In function ‘main’:
./samples/SAFE/__tmp_d37f74ba.c:161:17: error: ‘st’ undeclared (first use in this function)
  161 |         fprintf(st
      |                 ^~
./samples/SAFE/__tmp_d37f74ba.c:161:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d37f74ba.c:161:19: error: expected ‘)’ at end of input
  161 |         fprintf(st
      |                ~  ^
      |                   )
./samples/SAFE/__tmp_d37f74ba.c:161:9: error: too few arguments to function ‘fprintf’
  161 |         fprintf(st
      |         ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_d37f74ba.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_d37f74ba.c:161:9: error: expected declaration or statement at end of input
  161 |         fprintf(st
      |         ^~~~~~~
./samples/SAFE/__tmp_d37f74ba.c:161:9: error: expected declaration or statement at end of input
